save and delete developer added